5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4377/executions/1613_2425.log
== TEST (2019-03-30 22:20:26) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia*combustivel
print(round(consumo, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:20:43) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia*combustivel
print(round(consumo, 3)("km/l"))
-- EXECUTION TIME:
0.18944
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:21:00) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia*combustivel
print(round(consumo, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:21:17) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia*combustivel
print(round(consumo, 3)("km/l"))
-- EXECUTION TIME:
0.130277
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:21:59) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:22:08) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo, 3)("km/l"))
-- EXECUTION TIME:
0.154114
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:22:22) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo, 3)("km/l"))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:22:41) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo, 3)("km/l"))
-- EXECUTION TIME:
0.15738
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round(consumo, 3)("km/l"))
TypeError: 'float' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:23:36) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(km/h(consumo, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(km/h(consumo, 3)))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:24:03) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(km/h(consumo, 3)))
-- EXECUTION TIME:
0.133873
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round(km/h(consumo, 3)))
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:25:28) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(km/h(consumo, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(km/h(consumo, 3)))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:25:46) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(km/h(consumo, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round(km/h(consumo, 3)))
NameError: name 'km' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:25:56) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(km/h(consumo, 3)))
-- EXECUTION TIME:
0.126341
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round(km/h(consumo, 3)))
NameError: name 'km' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:26:25) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round("km/h"(consumo, 3)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(round("km/h"(consumo, 3)))
TypeError: 'str' object is not callable
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:26:33) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round("km/h"(consumo, 3)))
-- EXECUTION TIME:
0.189989
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/2425/main.py", line 4, in <module>
    print(round("km/h"(consumo, 3)))
TypeError: 'str' object is not callable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:02) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round("km/h"consumo, 3))
-- ERROR:
File "XXXX", line 4
    print(round("km/h"consumo, 3))
                            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:17) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round("km/h"(consumo, 3))
-- ERROR:
File "XXXX", line 5
    
                                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:28:27) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round((consumo, 3))
-- ERROR:
File "XXXX", line 5
    
                             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:29:16) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo,3))
print("km/h")
-- OUTPUT:
14.286
km/h
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:29:29) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo,3))
print("km/h")
-- EXECUTION TIME:
0.154411
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/h
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/h
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/h
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-30 22:30:22) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- OUTPUT:
14.286
km/l
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-30 22:30:31) 
-- CODE:
distancia=float(input("distancia"))
combustivel=float(input("combustivel"))
consumo= distancia/combustivel
print(round(consumo,3))
print("km/l")
-- EXECUTION TIME:
0.179103
-- TEST CASE 1:
---- input:
28.572
2
---- correct output:
14.286 km/l
---- user output:
14.286
km/l
-- TEST CASE 2:
---- input:
2254
124.4
---- correct output:
18.119 km/l
---- user output:
18.119
km/l
-- TEST CASE 3:
---- input:
4554
464.6
---- correct output:
9.802 km/l
---- user output:
9.802
km/l
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
